fix: high contrast mode styles

--- a/src/components/lyne-link-button/styles/lyne-link-button.component.scss
+++ b/src/components/lyne-link-button/styles/lyne-link-button.component.scss
@@ -39,6 +39,11 @@
 
 .link-button:hover {
   @include buttonHover;
+  &::before {
+    @include ifForcedColors {
+      border-color: LinkText;
+    }
+  }
 }
 
 .link-button:active {
